[gd_scene load_steps=36 format=3 uid="uid://cit58do7s84dv"]

[ext_resource type="Script" path="res://Scripts/enemy_boxer.gd" id="1_t6wtl"]
[ext_resource type="PackedScene" uid="uid://cm5on2wh0fj5p" path="res://Scenes/soft_collision.tscn" id="2_qsqvp"]
[ext_resource type="Shader" path="res://WhiteColor.gdshader" id="3_jg37k"]
[ext_resource type="Texture2D" uid="uid://dp0foiaww5e81" path="res://Game assets for demo/enemy_boxer.png" id="4_btppj"]
[ext_resource type="Texture2D" uid="uid://dxgrl0od7630j" path="res://Game assets for demo/enemy_boxer_run.png" id="5_a0qpx"]
[ext_resource type="Texture2D" uid="uid://lklpqwq6eyy4" path="res://Game assets for demo/enemy_boxer_dead.png" id="5_wrc7e"]
[ext_resource type="Texture2D" uid="uid://bgj0wq6sk3u6n" path="res://Game assets for demo/shadow.png" id="6_b6gdb"]
[ext_resource type="Texture2D" uid="uid://cwymbrdigmn17" path="res://Game assets for demo/enemy_boxer_spitting.png" id="7_fpen2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4uvs"]
size = Vector2(59, 61)

[sub_resource type="CircleShape2D" id="CircleShape2D_e1k3p"]
radius = 16.1245

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6e6yc"]

[sub_resource type="Animation" id="Animation_bbmd2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_6e6yc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:material/shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:material/shader_parameter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qnp7"]
shader = ExtResource("3_jg37k")
shader_parameter/active = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j0l3l"]
shader = ExtResource("3_jg37k")
shader_parameter/active = false

[sub_resource type="Animation" id="Animation_gpa0k"]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("ShaderMaterial_1qnp7"), SubResource("ShaderMaterial_j0l3l")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6xkd"]
_data = {
"RESET": SubResource("Animation_bbmd2"),
"blink": SubResource("Animation_gpa0k")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cab1g"]
radius = 184.003

[sub_resource type="CircleShape2D" id="CircleShape2D_mo8et"]
radius = 372.005

[sub_resource type="AtlasTexture" id="AtlasTexture_6uuos"]
atlas = ExtResource("5_wrc7e")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m0ov"]
atlas = ExtResource("4_btppj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pndua"]
atlas = ExtResource("5_a0qpx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqim7"]
atlas = ExtResource("5_a0qpx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_atwu3"]
atlas = ExtResource("5_a0qpx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ibvl"]
atlas = ExtResource("5_a0qpx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyq58"]
atlas = ExtResource("5_a0qpx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hfke"]
atlas = ExtResource("5_a0qpx")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouidr"]
atlas = ExtResource("7_fpen2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3odco"]
atlas = ExtResource("7_fpen2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08dsh"]
atlas = ExtResource("7_fpen2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfsud"]
atlas = ExtResource("7_fpen2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ervsu"]
atlas = ExtResource("7_fpen2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kls2l"]
atlas = ExtResource("7_fpen2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_071se"]
atlas = ExtResource("7_fpen2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxpp7"]
atlas = ExtResource("7_fpen2")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_d3k3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uuos")
}],
"loop": true,
"name": &"boxer_corpse",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m0ov")
}],
"loop": true,
"name": &"boxer_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pndua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqim7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atwu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ibvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyq58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hfke")
}],
"loop": true,
"name": &"boxer_run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouidr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3odco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08dsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfsud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ervsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kls2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_071se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxpp7")
}],
"loop": false,
"name": &"boxer_spitting",
"speed": 5.0
}]

[node name="Enemy_Boxer" type="CharacterBody2D" groups=["Enemy"]]
visibility_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_t6wtl")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-1, -2)
scale = Vector2(2.04688, 1.5625)
texture = ExtResource("6_b6gdb")

[node name="Hurtbox" type="Area2D" parent="." groups=["EnemyArea"]]
position = Vector2(0, 17)
collision_layer = 4
collision_mask = 6
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_v4uvs")
metadata/_edit_lock_ = true

[node name="SoftCollision" parent="." instance=ExtResource("2_qsqvp")]
metadata/_edit_lock_ = true

[node name="RayCast2D" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(-69, 28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e1k3p")
metadata/_edit_lock_ = true

[node name="Blink" type="AnimationPlayer" parent="."]
reset_on_save = false
root_node = NodePath("../Hurtbox")
libraries = {
"": SubResource("AnimationLibrary_x6xkd")
}
speed_scale = 3.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 60.0
path_postprocessing = 1
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="ShotTimer" type="Timer" parent="."]

[node name="AttackRange" type="Area2D" parent="." groups=["EnemyArea"]]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_cab1g")
debug_color = Color(1, 0.0114042, 0.0220368, 0.42)
metadata/_edit_lock_ = true

[node name="DetectionArea" type="Area2D" parent="." groups=["EnemyArea"]]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
modulate = Color(1, 1, 1, 0.254902)
shape = SubResource("CircleShape2D_mo8et")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6e6yc")
position = Vector2(-1, -8)
sprite_frames = SubResource("SpriteFrames_d3k3w")
animation = &"boxer_idle"
metadata/_edit_lock_ = true

[node name="ChaseTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
